# phonemgr

./: .cvsignore  .gitignore  AUTHORS  ChangeLog  ChangeLog.pre-gitlog  MAINTAINERS  Makefile.am  NEWS  README  TODO  autogen.sh  configure.in  phonemgr.doap
cut-n-paste/: Makefile.am
cut-n-paste/e-contact-entry/: Makefile.am
cut-n-paste/gconf-bridge/: Makefile.am
data/: Makefile.am  gnome-phone-manager.1  gnome-phone-manager.schemas.in  libephone.xml  libgnome_bluetooth.xml  phonemgr.glade  phonemgr.ui
data/icons/: Makefile.am
data/icons/16x16/status/: Makefile.am
data/icons/24x24/status/: Makefile.am
gnome-bluetooth/: Makefile.am  phonemgr.c
libgsm/: .cvsignore  Makefile.am  glibgsmtest.c  gnokii-identify.c  gsm.cc  gsm.h  main.cc  phonemgr-listener-private.h  phonemgr-listener.c  phonemgr-listener.cc  phonemgr-listener.h  phonemgr-marshal.list  phonemgr-utils.c  phonemgr-utils.h  phones.xml  test-sdp-search.c
po/: .cvsignore  ChangeLog  LINGUAS  POTFILES.in  ar.po  ca.po  cs.po  da.po  de.po  dz.po  el.po  en_CA.po  en_GB.po  eo.po  es.po  fi.po  fr.po  gl.po  gu.po  he.po  hu.po  id.po  it.po  lv.po  ml.po  nb.po  ne.po  nl.po  oc.po  pa.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  rw.po  sk.po  sl.po  sr.po  sr@latin.po  (+5 more)
src/: .cvsignore  Makefile.am  app.h  connection.c  e-contact-entry.c  e-contact-entry.h  e-phone-entry.c  e-phone-entry.h  gnome-phone-manager.desktop.in  icon.c  main.c  menu.c  org_gnome_phone_Manager.xml  org_gnome_phonemgr_Battery.xml  phonemgr-chooser-button.c  phonemgr-chooser-button.h  phonemgr-conf.h  phonemgr-object.c  phonemgr-object.h  test-entry.c  ui.c
telepathy/: Makefile.am  connection-manager.c  connection-manager.h  connection.c  connection.h  debug.c  debug.h  im-channel-factory.c  im-channel-factory.h  im-channel.c  im-channel.h  main.c  org.freedesktop.Telepathy.ConnectionManager.phoney.service.in  phoney.manager  sms.profile
ui/: GNOME_PhonemanagerApplet.xml  Makefile.am  cellphone-error.xcf  phonemgr.glade  phonemgr.gladep  strings.c
ui/icons/16x16/status/: Makefile.am
ui/icons/22x22/status/: Makefile.am
ui/icons/24x24/status/: Makefile.am
ui/pixmaps/: cellphone-connecting.xcf  cellphone-message.xcf
