dnl Process this file with autoconf to produce a configure script.
AC_PREREQ(2.52)

AC_INIT([GNOME Phone Manager],[0.66],[http://bugzilla.gnome.org/enter_bug.cgi?product=gnome-phone-manager],[gnome-phone-manager])
AC_CONFIG_SRCDIR(src/main.c)

AM_MAINTAINER_MODE
AM_CONFIG_HEADER(config.h)

AM_INIT_AUTOMAKE([1.9 dist-bzip2 no-dist-gzip check-news])

dnl Initialize libtool
AM_PROG_LIBTOOL

GNOKII_REQS="gnokii >= 0.6.28"
GNOME_BLUETOOTH_REQS="gnome-bluetooth-1.0"

AC_PROG_CC
AC_PROG_INSTALL
AC_ISC_POSIX
dnl Check for the "check" unit test framework
dnl AC_CHECK_LIB(check,suite_create)

# ****
# i18n
# ****

IT_PROG_INTLTOOL([0.35.0])

GETTEXT_PACKAGE=gnome-phone-manager
AC_SUBST([GETTEXT_PACKAGE])
AC_DEFINE_UNQUOTED([GETTEXT_PACKAGE],["gnome-phone-manager"],[GNOME phone manager applet gettext domain])
AM_GLIB_GNU_GETTEXT

# ****

AC_PATH_PROG(GCONFTOOL, gconftool-2)
AM_GCONF_SOURCE_2

dnl Evolution address book
PKG_CHECK_MODULES(TMP_EVO, libebook-1.2,
		evo_pc_file="libebook-1.2",
		evo_pc_file="libebook-1.0")

PKG_CHECK_MODULES(LIBGSM, glib-2.0 gobject-2.0 $GNOKII_REQS gthread-2.0 bluez $evo_pc_file)

PKG_CHECK_MODULES(PHONEMGR, gtk+-2.0 >= 2.18 glib-2.0 >= 2.25.0
	libcanberra-gtk gdk-pixbuf-2.0 gconf-2.0
	$GNOME_BLUETOOTH_REQS $evo_pc_file
	gmodule-2.0 dbus-glib-1 gnome-icon-theme >= 2.19.1
	gtkspell-2.0
)

DBUSLIBDIR="`$PKG_CONFIG dbus-glib-1 --variable=libdir`"
DBUSBINDIR="`echo $DBUSLIBDIR | sed -e s/lib/bin/`"
AC_PATH_PROG([DBUS_BIND], [dbus-binding-tool], [no], [$DBUSBINDIR:$PATH])
if test "x$DBUS_BIND" = "xno"; then
	AC_MSG_WARN([dbus-binding-tool not found])
fi

saved_CPPFLAGS="$CPPFLAGS"
CPPFLAGS="$CPPFLAGS $TMP_EVO_CFLAGS"
AC_CHECK_TYPES([EContactPhotoType], , , [#include <libebook/e-contact.h>])
CPPFLAGS="$saved_CPPFLAGS"

AC_SUBST(PHONEMGR_CFLAGS)
AC_SUBST(PHONEMGR_LIBS)

dnl Check for telepathy property page build
AC_ARG_ENABLE(telepathy,
	AC_HELP_STRING([--enable-telepathy],[compile the telepathy SMS plugin]),
	[case "${enableval}" in
	yes) ENABLE_TELEPATHY=yes ;;
	no) ENABLE_TELEPATHY=no ;;
	*) AC_MSG_ERROR(bad value ${enableval} for --enable-telepathy) ;;
	esac],
	[ENABLE_TELEPATHY=yes]) dnl Default value

if test x$ENABLE_TELEPATHY = "xyes" ; then
	PKG_CHECK_MODULES(TELEPATHY, telepathy-glib,
			[HAVE_TELEPATHY=yes], [HAVE_TELEPATHY=no])
fi
if test x$HAVE_TELEPATHY = "xyes"; then
	AC_DEFINE(HAVE_TELEPATHY, 1, [defined if you build the telepathy SMS plugin])
fi
AM_CONDITIONAL(HAVE_TELEPATHY, test x$HAVE_TELEPATHY = "xyes")

dnl Check for gnome-bluetooth plugin build
AC_ARG_ENABLE(bluetooth-plugin,
	AC_HELP_STRING([--enable-bluetooth-plugin],[compile the gnome-bluetooth plugin]),
	[case "${enableval}" in
	yes) ENABLE_BLUETOOTH_PLUGIN=yes ;;
	no) ENABLE_BLUETOOTH_PLUGIN=no ;;
	*) AC_MSG_ERROR(bad value ${enableval} for --enable-bluetooth-plugin) ;;
	esac],
	[ENABLE_BLUETOOTH_PLUGIN=yes]) dnl Default value

if test x$ENABLE_BLUETOOTH_PLUGIN = "xyes" ; then
	PKG_CHECK_MODULES(BLUETOOTH_PLUGIN, gnome-bluetooth-1.0 >= 2.27.6 gconf-2.0,
			[HAVE_BLUETOOTH_PLUGIN=yes], [HAVE_BLUETOOTH_PLUGIN=no])
fi
if test x$HAVE_BLUETOOTH_PLUGIN = "xyes"; then
	AC_DEFINE(HAVE_BLUETOOTH_PLUGIN, 1, [Defined to 1 if you build the gnome-bluetooth plugin.])
fi
AM_CONDITIONAL(HAVE_BLUETOOTH_PLUGIN, test x$HAVE_BLUETOOTH_PLUGIN = "xyes")

AC_PATH_PROG(GLIB_GENMARSHAL, glib-genmarshal, no)
AC_SUBST(GLIB_GENMARSHAL)

AC_PATH_PROG(GCONFTOOL, gconftool-2, no)

if test x"$GCONFTOOL" = xno; then
  AC_MSG_ERROR([gconftool-2 executable not found in your path - should be installed with GConf])
fi

dnl ================================================================
dnl set up data dir
if test "x${datadir}" = 'x${prefix}/share'; then
  if test "x${prefix}" = "xNONE"; then
    AC_DEFINE_UNQUOTED(PHONEMGR_DATA_DIR, "${ac_default_prefix}/share/${PACKAGE}", [data dir])
  else
    AC_DEFINE_UNQUOTED(PHONEMGR_DATA_DIR, "${prefix}/share/${PACKAGE}", [data dir])
  fi
else
  AC_DEFINE_UNQUOTED(PHONEMGR_DATA_DIR, "${datadir}/${PACKAGE}", [data dir])
fi

GNOME_COMMON_INIT
GNOME_DEBUG_CHECK
GNOME_COMPILE_WARNINGS([maximum])
GNOME_CXX_WARNINGS
GNOME_MAINTAINER_MODE_DEFINES

AC_CONFIG_FILES([
Makefile
data/Makefile
data/icons/Makefile
data/icons/16x16/status/Makefile
data/icons/16x16/Makefile
data/icons/22x22/status/Makefile
data/icons/22x22/Makefile
data/icons/24x24/status/Makefile
data/icons/24x24/Makefile
libgsm/Makefile
cut-n-paste/Makefile
cut-n-paste/e-contact-entry/Makefile
cut-n-paste/gconf-bridge/Makefile
src/Makefile
gnome-bluetooth/Makefile
telepathy/Makefile
po/Makefile.in
])

AC_OUTPUT

