
pixmapsdir = $(datadir)/$(pixmaps)
pixmaps_DATA = cellphone.png

uidir = $(datadir)/$(PACKAGE)
ui_DATA = phonemgr.glade

icondir = $(datadir)/$(PACKAGE)
icon_DATA = cellphone-connecting.png cellphone-error.png cellphone-message.png cellphone.png

sounddir = $(datadir)/$(PACKAGE)
sound_DATA = alert.wav

EXTRA_DIST = $(ui_DATA) $(icon_DATA) $(sound_DATA) $(pixmaps_DATA) cellphone-connecting.xcf cellphone-error.xcf cellphone-message.xcf

